@startuml
' Styling
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

entity "User" {
    *id : UUID <<PK>>
    --
    name : string
    email : string
    password_hash : string
    created_at : timestamp
}

entity "Item" {
    *id : UUID <<PK>>
    --
    parent_id : UUID <<FK>>
    name : string
    brand : string
    model : string
    purchase_date : date
    manual_url : string
    notes : text
    created_at : timestamp
}

entity "MaintenanceTask" {
    *id : UUID <<PK>>
    --
    *item_id : UUID <<FK>>
    *MaintenanceRecord_id : UUID <<FK>>
    description : text
    frequency : string
    difficulty_level : integer
    estimated_duration : interval
    required_tools : text[]
    instructions : text
    created_at : timestamp
}

entity "MaintenanceRecord" {
    *id : UUID <<PK>>
    --
    date_performed : timestamp
    status : enum
    notes : text
    created_at : timestamp
}



' Relationships
Item }o--o{ Item : has child
User }o--o{ Item : owns
User ||--o{ MaintenanceRecord : performs

Item ||--o{ MaintenanceTask : requires


MaintenanceTask ||--o{ MaintenanceRecord : tracks

@enduml